pkg_includedir= ${prefix}/include/${PACKAGE_NAME}

pkg_include_HEADERS= addWeather.h \
	cloudGrp.h        \
	ff2beaufort.h     \
	gust.h            \
	humidity.h        \
	iceAccretion.h    \
	miSymbol.h        \
	paramet.h         \
	ptStatistics.h    \
	symbolMaker.h     \
	usrTab.h          \
	visibility.h      \
	vision.h          \
	weatherSpec.h     \
	windProfile.h
