
INCLUDE_DIRECTORIES(${PC_METLIBS_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
ADD_DEFINITIONS(-W -Wall ${PC_METLIBS_CFLAGS_OTHER})
LINK_DIRECTORIES(${PC_METLIBS_LIBRARY_DIRS} ${BOOST_LIBRARY_DIRS})

ADD_DEFINITIONS(-DPUMETDIR=\"${CMAKE_CURRENT_SOURCE_DIR}\")

METNO_FIND_GTEST()

INCLUDE_DIRECTORIES(
  "${CMAKE_SOURCE_DIR}/src"
)

ADD_EXECUTABLE(pumet_test
  check-symbolMaker.cc
)

TARGET_LINK_LIBRARIES(pumet_test
  pumet
  ${GTEST_MAIN_LIBRARY}
)

ADD_TEST(NAME pumet_test
  COMMAND pumet_test --gtest_color=yes
)
